chore: limpieza de archivos grandes y corrección de gitignore